--- a/main.css
+++ b/main.css
@@ -9,6 +9,10 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    position: sticky;
+    top: 0;
+    background-color:white;
+    z-index: 1;
   }
 
 .header__logo {
@@ -40,11 +44,20 @@ button {
 
 .about__image {
     width: 500px;
+    display: inline-block;
+    animation: fadeInRight;
+    animation-duration: 2s;
   }
    
 .about__sun-image {
     width: 100px;
     height: 100px;
+    animation-name: rotation;
+    transform: rotate(1turn);
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    position: absolute
   }
 
 .about {
@@ -61,12 +74,18 @@ button {
 .about h1 {
     font-size: 70px;
     line-height: 76px;
+    display: inline-block;
+    animation: fadeInLeft;
+    animation-duration: 2s;
 }
 
 .about p {
     font-size: 18px;
     line-height: 30px;
     opacity: 0.8;
+    display: inline-block;
+    animation: fadeInLeft;
+    animation-duration: 2s;
 }
 
 .about button {
@@ -74,10 +93,16 @@ button {
     border-radius: 20px;
     padding: 20px 25px;
     margin-top: 20px;
+    display: inline-block;
+    animation: fadeInLeft;
+    animation-duration: 2s;
 }
 
 .about__info {
     max-width: 550px;
+    display: inline-block;
+    animation: fadeInLeft;
+    animation-duration: 2s;
   }
 
 .form__container {
@@ -126,7 +151,7 @@ button {
   font-size: 18px;
   color: #213053;
   height: 60px;
-  padding: 0px 20px 0px 20px;
+  padding: 0px 20px;
   border-radius: 15px;
   border: none;
   outline: none;
@@ -136,7 +161,7 @@ button {
   font-size: 18px;
   color: #213053;
   height: 60px;
-  padding: 0px 20px 0px 20px;
+  padding: 0px 20px;
   border-radius: 15px;
   border: none;
   appearance: none;
@@ -151,7 +176,7 @@ button {
 button:hover {
   background-color: #f6980c;
   box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
-  transition: background-color 1s ease-in;
+  transition: background-color 0,3s ease-in;
 }
 
 footer {
@@ -191,4 +216,82 @@ footer {
 
 .footer__links a {
   padding-bottom: 15px;
+}
+
+@keyframes rotation {
+  0% {transform: rotate(0);}
+  100% {transform: rotate(360deg)}
+}
+
+.about__sun-image:hover {
+  transform: rotate(1turn)
+}
+
+@media (max-width: 1024px) {
+  .about {
+      padding: 115px 20px;
+  }
+
+  .about h1 {
+      font-size: 36px;
+      line-height: 40px;
+  }
+
+  .about__image {
+      width: 280px;
+  }
+
+  .about__sun-image {
+      width: 75px;
+      height: 75px;
+  }
+}
+
+@media (max-width: 720px) {
+  header {
+    padding: 10px;
+  }
+
+.header__logo {
+    height: 20px;
+  }
+
+header a {
+    margin-right: 10px;
+  }
+
+.about {
+    flex-direction: column-reverse;
+    padding: 50px 10px;
+  }
+
+.about h1 {
+    font-size: 36px;
+    line-height: 40px;
+  }
+
+.about__image {
+    width: 280px;
+  }
+
+.about__sun-image {
+    width: 75px;
+    height: 75px;
+  }
+
+.form {
+    padding: 50px 10px;
+  }
+
+.form h1 {
+    font-size: 36px;
+  }
+
+footer {
+    padding: 50px 10px;
+  }
+
+.footer__container {
+    flex-direction: column;
+  }
 }
