--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ button {
     background: url('img/back.png') no-repeat;
     background-position: center;
     background-size: cover;
+    position: relative;
 }
 
 .about h1 {
@@ -501,4 +502,15 @@ footer {
 .promo__text button i {
   font-size: 15px;
   margin-left: 5px;
+}
+
+.about {
+  position: relative;
+}
+
+.orb-canvas {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  right: 0;
 }
