--- a/main.css
+++ b/main.css
@@ -9,10 +9,14 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     background-color:white;
+    background: none;
     z-index: 1;
+    transition: box-shadow, background-color .25s ease;
   }
 
 .header__logo {
@@ -506,6 +510,8 @@ footer {
 
 .about {
   position: relative;
+  padding-top: 200px;
+
 }
 
 .orb-canvas {
@@ -513,4 +519,9 @@ footer {
   top: 0;
   height: 100%;
   right: 0;
+}
+
+.header__scrolled {
+  background-color: white;
+  box-shadow: 0 12px 34px -11px rgb(65 62 101 / 10%);
 }
